# Whisper-Transcriptor

./: .gitignore  CITATION.cff  LICENSE  README.md  install.bat  main copy.py  main-merge.py  main.py  pyproject.toml  requirements.txt  testdll.py  torerom4a.m4a  transcripcion_textos-Medium 1m21s.txt  transcripcion_textos-Medium.txt  transcripcion_textos-Small 16s.txt  transcripcion_textos-Small 20s.txt  transcripcion_textos.txt  transcripcion_textos_turbo-4gb.txt
CheckBoxVersion/: main.py
CheckBoxVersion/src/: whisperp.py
Whisper-Transcript/: pyvenv.cfg
Whisper-Transcript/Scripts/: activate  activate.bat  find-corrupt-whisper-files.py  numba  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng  rrd2whisper.py  update-storage-times.py  whisper-auto-resize.py  whisper-auto-update.py  whisper-create.py  whisper-diff.py  whisper-dump.py  whisper-fetch.py  whisper-fill.py  whisper-info.py  whisper-merge.py  whisper-resize.py  whisper-set-aggregation-method.py  whisper-set-xfilesfactor.py  whisper-update.py
WhisperSrc/: whisper_python.py
src/: main.py  whisper.py  whispercppy.py  whisperpy.py
src/scripts/: whispercppy.py  whisperpy.py
storage/data/: AppWOW.vbs  TranscriptorApp.bat  executeMain.bat  installwogit.bat
