[project]
name = "whisper-transcriptor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Miguel Contreras", email = "miguelignacio.contreras@alumnos.ulagos.cl" }
    { name = "Diego Molina", email = "diegomolina761@gmail.com" }
]
dependencies = [
  "flet==0.26.0",
  "torch>=1.9.0",
  "whisper",
  "pydub",
  "ffmpeg",
  "openai-whisper",
  "torchaudio",
  "torchvision"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "whisper-transcriptor"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = ""

[tool.uv]
dev-dependencies = [
    "flet[all]==0.26.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.26.0"}