[project]
name = "Transcriptor-Multimedia"
version = "1.0.0"
description = "Front-End para utilizar Whisper de forma local"
readme = "README.md"
requires-python = "==3.12.6"
authors = [
    { name = "Miguel Contreras", email = "mjk90000@gmail.com" },
    { name = "Diego Molina", email = "diegomolina761@gmail.com" }
]
dependencies = [
  "flet[all]==0.27.1",
  "openai-whisper==20240930",
  "pydub==0.25.1",
  "pywhispercpp @ git+https://github.com/absadiki/pywhispercpp@fc58ffbf03058e1dab79f1823bcf7bee36a71edb",
  "torch @ https://download.pytorch.org/whl/cu126/torch-2.6.0%2Bcu126-cp312-cp312-win_amd64.whl#sha256=b10c39c83e5d1afd639b5c9f5683b351e97e41390a93f59c59187004a9949924",
  "torchaudio @ https://download.pytorch.org/whl/cu126/torchaudio-2.6.0%2Bcu126-cp312-cp312-win_amd64.whl#sha256=144b286d2f6195ba8d75ed1a568bddd718d032d54d1bf94940d47730c6321a0b",
  "torchvision @ https://download.pytorch.org/whl/cu126/torchvision-0.21.0%2Bcu126-cp312-cp312-win_amd64.whl#sha256=600c18579cd6eae8f6bbfcc43a088bc512bfde1fa4de0587a4db1d44eaf411f9",
  "tqdm==4.67.1"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Transcriptor"

# company name to display in about app dialogs
company = "MCandDM"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Miguel Contreras and Diego Molina"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.1",
]#